Revert "Code screen stretch fix (#4)"
This reverts commit a92aecdbc1dffee414fd85ff6c91cbe2d6c3e618.

--- a/public/style/codemirror.css
+++ b/public/style/codemirror.css
@@ -4,8 +4,6 @@
   /* Set height, width, borders, and global font properties here */
   font-family: monospace;
   height: 300px;
-  width: 500px;
-  max-width: 500px;
   color: black;
   direction: ltr;
   border: 1px solid black; 
